Fix a few formatting and layout issues through site

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -23,6 +23,15 @@ body {
     font-family: 'Anonymous Pro', monospace;
 }
 
+a {
+    color: black;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
 .centre-flex {
     display: flex;
     justify-content: center; /* Center horizontally */
@@ -86,6 +95,19 @@ header {
 
 .container {
     padding-top: 200px;
+}
+
+.icon {
+    max-width: 200px; 
+    height: auto;    
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.centre-flex {
+    display: flex;
+    justify-content: center;
 }
 
 /* Sticky Header JavaScript-Enabled Behavior */
@@ -185,6 +207,22 @@ header {
 
 .checkbox-group span {
     font-size: 0.8rem; 
+}
+
+.allergen-filters .form-group {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.allergen-filters .form-group label,
+.allergen-filters .form-group input {
+    width: auto;
+    margin-right: 10px;
+}
+
+.allergen-filters .form-group input {
+    margin-top: 5px;
+    transform: scale(0.8);
 }
 
 
